--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
               </li><li class="nav-item">
                 <a class="nav-link" href="html/categoria.html">categorias</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li><li class="nav-item">
+                <a class="nav-link" href="html/usuarios.html">Usuarios</a>
               </li>
+              
             </ul>
           </div>
         </div>
@@ -47,7 +48,7 @@
                 </div>
                 <div class="card-body">
                     <di id="info">
-                        <h1 class="text-center">prueba</h1>
+                        <h1 class="text-center">Bienvenidos a nuestra desgracia... que digo, a nuestra pagina :D</h1>
                 </div>
 
             </div>
